Configure indexing of resource fields
Working for Patient.gender and CarePlan.context